--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,6 @@
-SERVICE_NAME="server"
+SERVICE_NAME="todo-service"
 PROJECT_HOST="localhost"
 PROJECT_PORT="8080"
+DATABASE_URL="postgres://user:password@localhost:5432/todo_db?sslmode=disable"
+TEST_DATABASE_URL="postgres://user:password@localhost:5432/todo_db?sslmode=disable"
+# DISABLE_LOGGING="true"
