Add support for serving over https

--- a/.env_example
+++ b/.env_example
@@ -4,3 +4,5 @@ PROJECT_PORT="8080"
 DATABASE_URL="postgres://user:password@localhost:5432/todo_db?sslmode=disable"
 TEST_DATABASE_URL="postgres://user:password@localhost:5432/todo_db?sslmode=disable"
 # DISABLE_LOGGING="true"
+CERT_FILE=""
+KEY_FILE=""
